# Sinewave

./: CHANGELOG.md  README.md  api.py  controller.py  file_conversion.py  main.py  model.py  pyproject.toml  requirements.txt  view.py  window.py
